--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-data-table-component": "^7.6.2",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.4.0",
+    "styled-components": "^6.1.15",
     "zod": "^3.24.1"
   },
   "devDependencies": {
